components/visualizations/BarChart/BarChart.scss
@use '../../../styles/patterns' as *;

.barChart {
  position: relative;
  width: 100%;

  svg {
    overflow: visible;
  }

  &__tooltipLabel {
    @include chart-tooltip-label;
  }

  &__axisTickLabel text {
    word-break: break-word;
  }
}

